# retraction_api

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  Dockerfile.mcp  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: sync-retraction-data.yml
app/: config.py  database.py  main.py  models.py  schemas.py  serializers.py
app/routes/: articles.py  health.py  lookup.py  search.py  statistics.py
data/: retraction_watch.db
mcp_server/: __init__.py  api_client.py  config.py  server.py
scripts/: explore_csv.py  ingest_csv.py  validate_csv.py
tests/: conftest.py  test_articles.py  test_health.py  test_ingest_csv.py  test_lookup.py  test_mcp_api_client.py  test_mcp_server.py  test_search.py  test_statistics.py  test_validate_csv.py
